; ModuleID = '/home/carl/AnghaBench/linux/security/selinux/extr_selinuxfs.c_sel_write_relabel.c'
source_filename = "/home/carl/AnghaBench/linux/security/selinux/extr_selinuxfs.c_sel_write_relabel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.selinux_fs_info = type { %struct.selinux_state* }
%struct.selinux_state = type { i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.selinux_fs_info* }

@selinux_state = common dso_local global i32 0, align 4
@SECINITSID_SECURITY = common dso_local global i32 0, align 4
@SECCLASS_SECURITY = common dso_local global i32 0, align 4
@SECURITY__COMPUTE_RELABEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"%s %s %hu\00", align 1
@ERANGE = common dso_local global i32 0, align 4
@SIMPLE_TRANSACTION_LIMIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, i64)* @sel_write_relabel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sel_write_relabel(%struct.file* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.selinux_fs_info*, align 8
  %8 = alloca %struct.selinux_state*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %18 = load %struct.file*, %struct.file** %4, align 8
  %19 = call %struct.TYPE_4__* @file_inode(%struct.file* %18)
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load %struct.selinux_fs_info*, %struct.selinux_fs_info** %22, align 8
  store %struct.selinux_fs_info* %23, %struct.selinux_fs_info** %7, align 8
  %24 = load %struct.selinux_fs_info*, %struct.selinux_fs_info** %7, align 8
  %25 = getelementptr inbounds %struct.selinux_fs_info, %struct.selinux_fs_info* %24, i32 0, i32 0
  %26 = load %struct.selinux_state*, %struct.selinux_state** %25, align 8
  store %struct.selinux_state* %26, %struct.selinux_state** %8, align 8
  store i8* null, i8** %9, align 8
  store i8* null, i8** %10, align 8
  store i8* null, i8** %16, align 8
  %27 = call i32 (...) @current_sid()
  %28 = load i32, i32* @SECINITSID_SECURITY, align 4
  %29 = load i32, i32* @SECCLASS_SECURITY, align 4
  %30 = load i32, i32* @SECURITY__COMPUTE_RELABEL, align 4
  %31 = call i32 @avc_has_perm(i32* @selinux_state, i32 %27, i32 %28, i32 %29, i32 %30, i32* null)
  store i32 %31, i32* %15, align 4
  %32 = load i32, i32* %15, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %3
  br label %109

35:                                               ; preds = %3
  %36 = load i32, i32* @ENOMEM, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %15, align 4
  %38 = load i64, i64* %6, align 8
  %39 = add i64 %38, 1
  %40 = load i32, i32* @GFP_KERNEL, align 4
  %41 = call i8* @kzalloc(i64 %39, i32 %40)
  store i8* %41, i8** %9, align 8
  %42 = load i8*, i8** %9, align 8
  %43 = icmp ne i8* %42, null
  br i1 %43, label %45, label %44

44:                                               ; preds = %35
  br label %109

45:                                               ; preds = %35
  %46 = load i32, i32* @ENOMEM, align 4
  %47 = sub nsw i32 0, %46
  store i32 %47, i32* %15, align 4
  %48 = load i64, i64* %6, align 8
  %49 = add i64 %48, 1
  %50 = load i32, i32* @GFP_KERNEL, align 4
  %51 = call i8* @kzalloc(i64 %49, i32 %50)
  store i8* %51, i8** %10, align 8
  %52 = load i8*, i8** %10, align 8
  %53 = icmp ne i8* %52, null
  br i1 %53, label %55, label %54

54:                                               ; preds = %45
  br label %109

55:                                               ; preds = %45
  %56 = load i32, i32* @EINVAL, align 4
  %57 = sub nsw i32 0, %56
  store i32 %57, i32* %15, align 4
  %58 = load i8*, i8** %5, align 8
  %59 = load i8*, i8** %9, align 8
  %60 = load i8*, i8** %10, align 8
  %61 = call i32 @sscanf(i8* %58, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %59, i8* %60, i32* %14)
  %62 = icmp ne i32 %61, 3
  br i1 %62, label %63, label %64

63:                                               ; preds = %55
  br label %109

64:                                               ; preds = %55
  %65 = load %struct.selinux_state*, %struct.selinux_state** %8, align 8
  %66 = load i8*, i8** %9, align 8
  %67 = load i32, i32* @GFP_KERNEL, align 4
  %68 = call i32 @security_context_str_to_sid(%struct.selinux_state* %65, i8* %66, i32* %11, i32 %67)
  store i32 %68, i32* %15, align 4
  %69 = load i32, i32* %15, align 4
  %70 = icmp ne i32 %69, 0
  br i1 %70, label %71, label %72

71:                                               ; preds = %64
  br label %109

72:                                               ; preds = %64
  %73 = load %struct.selinux_state*, %struct.selinux_state** %8, align 8
  %74 = load i8*, i8** %10, align 8
  %75 = load i32, i32* @GFP_KERNEL, align 4
  %76 = call i32 @security_context_str_to_sid(%struct.selinux_state* %73, i8* %74, i32* %12, i32 %75)
  store i32 %76, i32* %15, align 4
  %77 = load i32, i32* %15, align 4
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %79, label %80

79:                                               ; preds = %72
  br label %109

80:                                               ; preds = %72
  %81 = load %struct.selinux_state*, %struct.selinux_state** %8, align 8
  %82 = load i32, i32* %11, align 4
  %83 = load i32, i32* %12, align 4
  %84 = load i32, i32* %14, align 4
  %85 = call i32 @security_change_sid(%struct.selinux_state* %81, i32 %82, i32 %83, i32 %84, i32* %13)
  store i32 %85, i32* %15, align 4
  %86 = load i32, i32* %15, align 4
  %87 = icmp ne i32 %86, 0
  br i1 %87, label %88, label %89

88:                                               ; preds = %80
  br label %109

89:                                               ; preds = %80
  %90 = load %struct.selinux_state*, %struct.selinux_state** %8, align 8
  %91 = load i32, i32* %13, align 4
  %92 = call i32 @security_sid_to_context(%struct.selinux_state* %90, i32 %91, i8** %16, i32* %17)
  store i32 %92, i32* %15, align 4
  %93 = load i32, i32* %15, align 4
  %94 = icmp ne i32 %93, 0
  br i1 %94, label %95, label %96

95:                                               ; preds = %89
  br label %109

96:                                               ; preds = %89
  %97 = load i32, i32* @ERANGE, align 4
  %98 = sub nsw i32 0, %97
  store i32 %98, i32* %15, align 4
  %99 = load i32, i32* %17, align 4
  %100 = load i32, i32* @SIMPLE_TRANSACTION_LIMIT, align 4
  %101 = icmp sgt i32 %99, %100
  br i1 %101, label %102, label %103

102:                                              ; preds = %96
  br label %109

103:                                              ; preds = %96
  %104 = load i8*, i8** %5, align 8
  %105 = load i8*, i8** %16, align 8
  %106 = load i32, i32* %17, align 4
  %107 = call i32 @memcpy(i8* %104, i8* %105, i32 %106)
  %108 = load i32, i32* %17, align 4
  store i32 %108, i32* %15, align 4
  br label %109

109:                                              ; preds = %103, %102, %95, %88, %79, %71, %63, %54, %44, %34
  %110 = load i8*, i8** %16, align 8
  %111 = call i32 @kfree(i8* %110)
  %112 = load i8*, i8** %10, align 8
  %113 = call i32 @kfree(i8* %112)
  %114 = load i8*, i8** %9, align 8
  %115 = call i32 @kfree(i8* %114)
  %116 = load i32, i32* %15, align 4
  ret i32 %116
}

declare dso_local %struct.TYPE_4__* @file_inode(%struct.file*) #1

declare dso_local i32 @avc_has_perm(i32*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @current_sid(...) #1

declare dso_local i8* @kzalloc(i64, i32) #1

declare dso_local i32 @sscanf(i8*, i8*, i8*, i8*, i32*) #1

declare dso_local i32 @security_context_str_to_sid(%struct.selinux_state*, i8*, i32*, i32) #1

declare dso_local i32 @security_change_sid(%struct.selinux_state*, i32, i32, i32, i32*) #1

declare dso_local i32 @security_sid_to_context(%struct.selinux_state*, i32, i8**, i32*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
